--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i class="fa fa-fw fa-weibo"></i></a>
                             </li>
                             <li>
-                                <a href="contactme.html" class="btn-social btn-outline"><i class="fa fa-fw fa-mail-forward"></i></a>
+                                <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i class="fa fa-envelope-o"></i></a>
                             </li>
                         </ul>
                     </div>
