--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i class="fa fa-fw fa-weibo"></i></a>
                             </li>
                             <li>
-                                <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i class="fa fa-envelope-o"></i></a>
+                                <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i class="fa fa-envelope"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -210,7 +210,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; Yidi Zhu 2016
                     </div>
                 </div>
             </div>
@@ -244,13 +244,17 @@
                                 This is the term project for interdisciplinary design class.
                             </p>
                             <ul class="list-inline item-details">
-                                <li>Date:
-                                    <strong>April 2016
-                                    </strong>
+                                <li>
+                                    <strong>Date:</strong> April 2016
                                 </li>
-                                <li>Type:
-                                    <strong>2D Platformer
-                                    </strong>
+                                <li>
+                                    <strong>Type:</strong> 2D Platformer
+                                </li>
+                                <li>
+                                    <strong>My role:</strong> Game designer & programmer
+                                </li>
+                                <li>
+                                    <a href="https://yidizhu.com"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -314,17 +318,17 @@
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                <li>
+                                    <strong>Date:</strong> April 2016
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                <li>
+                                    <strong>Type:</strong> 2D Platformer
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                <li>
+                                    <strong>My role:</strong> Game designer & programmer
+                                </li>
+                                <li>
+                                    <a href="https://yidizhu.com/resources/downloads/TombVictims.zip"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -383,22 +387,23 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Dual Balance</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This game is currently available on Android platform, as I'm not in Apple's developer program and I can't test it on iOS.
+                                But I do plan to release it on the AppStore in the near future, after polishing it.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>November 2016
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Type:
+                                    <strong>3D cooperation mobile game
                                     </strong>
+                                </li>
+                                <li><a href="https://yidizhu.com"><i class="fa fa-download" aria-hidden="true"></i>
+                                    Download
+                                </a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
