updated portfolio images and download links

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <i>Zombie town</i>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/2zombieTown.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -118,7 +118,7 @@
                                 <i>Tomb Victims</i>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/3tombVictims.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -128,7 +128,7 @@
                                 <i>YiCon</i>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/4yiCon.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -138,7 +138,7 @@
                                 <i>Dual Balance</i>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/5dualBalance.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -254,7 +254,7 @@
                                     <strong>My role:</strong> Game designer & programmer
                                 </li>
                                 <li>
-                                    <a href="https://yidizhu.com"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+                                    <a href="https://github.com/zhuyidiwow/Interdisciplinary-Design/releases/tag/v1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -276,22 +276,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Zombie Town</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="resources/images/portfolio/2zombieTown.png" class="img-responsive img-centered" alt="">
+                            <p>A prototype made for the Introduction to Game Development class on Coursera.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                <li>
+                                    <strong>Date:</strong> September 2016
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                <li>
+                                    <strong>Type:</strong> First Person Shooter
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                <li>
+                                    <strong>My role:</strong> Game designer & programmer
+                                </li>
+                                <li>
+                                    <a href="https://github.com/zhuyidiwow/Box-Shooter/releases/tag/v0.1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -313,22 +313,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Tomb Victims</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="resources/images/portfolio/3tombVictims.png" class="img-responsive img-centered" alt="">
+                            <p>This is a prototype made for the Principles of Game Design class on Coursera.</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong>Date:</strong> April 2016
+                                    <strong>Date:</strong> September 2016
                                 </li>
                                 <li>
-                                    <strong>Type:</strong> 2D Platformer
+                                    <strong>Type:</strong> Running
                                 </li>
                                 <li>
                                     <strong>My role:</strong> Game designer & programmer
                                 </li>
                                 <li>
-                                    <a href="https://yidizhu.com/resources/downloads/TombVictims.zip"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+                                    <a href="https://github.com/zhuyidiwow/Tomb-Victims/releases/tag/0.1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -350,22 +350,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>YiCon</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="resources/images/portfolio/4yiCon.png" class="img-responsive img-centered" alt="">
+                            <p>This game is made for my Final Year Project.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                <li>
+                                    <strong>Date:</strong> November 2016
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                <li>
+                                    <strong>Type:</strong> Construction Simulation
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                <li>
+                                    <strong>My role:</strong> Game designer & programmer
+                                </li>
+                                <li>
+                                    <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -389,21 +389,21 @@
                         <div class="modal-body">
                             <h2>Dual Balance</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                            <img src="resources/images/portfolio/5dualBalance.png" class="img-responsive img-centered" alt="">
                             <p>This game is currently available on Android platform, as I'm not in Apple's developer program and I can't test it on iOS.
                                 But I do plan to release it on the AppStore in the near future, after polishing it.</p>
                             <ul class="list-inline item-details">
-                                <li>Date:
-                                    <strong>November 2016
-                                    </strong>
+                                <li>
+                                    <strong>Date:</strong> November 2016
                                 </li>
-                                <li>Type:
-                                    <strong>3D cooperation mobile game
-                                    </strong>
+                                <li>
+                                    <strong>Type:</strong> 3D cooperation mobile game
                                 </li>
-                                <li><a href="https://yidizhu.com"><i class="fa fa-download" aria-hidden="true"></i>
-                                    Download
-                                </a>
+                                <li>
+                                    <strong>My role:</strong> Game designer & programmer
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -425,22 +425,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Primal Life</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="resources/images/portfolio/6primalLife.png" class="img-responsive img-centered" alt="">
+                            <p>This is an ongoing term project for <i>Game Design and Development</i> class at the HK PolyU.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                                <li>
+                                    <strong>Date:</strong> November 2016
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                <li>
+                                    <strong>Type:</strong> 3D low-poly survival game
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                <li>
+                                    <strong>My role:</strong> Game designer, level designer, animator, programmer
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
