added download for dual balance

--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Primal Space</h2>
                             <hr class="star-primary">
                             <img src="resources/images/portfolio/1primalSpace.png" class="img-responsive img-centered" alt="">
                             <p>
                                 This is the term project for interdisciplinary design class.
                             </p>
-                            <ul class="list-inline item-details">
+                            <ul class="item-details">
                                 <li>
                                     <strong>Date:</strong> April 2016
                                 </li>
@@ -251,7 +251,7 @@
                                     <strong>Type:</strong> 2D Platformer
                                 </li>
                                 <li>
-                                    <strong>My role:</strong> Game designer & programmer
+                                    <strong>Role:</strong> Game designer & programmer
                                 </li>
                                 <li>
                                     <a href="https://github.com/zhuyidiwow/Interdisciplinary-Design/releases/tag/v1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
@@ -280,7 +280,7 @@
                             <hr class="star-primary">
                             <img src="resources/images/portfolio/2zombieTown.png" class="img-responsive img-centered" alt="">
                             <p>A prototype made for the Introduction to Game Development class on Coursera.</p>
-                            <ul class="list-inline item-details">
+                            <ul class="item-details">
                                 <li>
                                     <strong>Date:</strong> September 2016
                                 </li>
@@ -288,7 +288,7 @@
                                     <strong>Type:</strong> First Person Shooter
                                 </li>
                                 <li>
-                                    <strong>My role:</strong> Game designer & programmer
+                                    <strong>Role:</strong> Game designer & programmer
                                 </li>
                                 <li>
                                     <a href="https://github.com/zhuyidiwow/Box-Shooter/releases/tag/v0.1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
@@ -317,7 +317,7 @@
                             <hr class="star-primary">
                             <img src="resources/images/portfolio/3tombVictims.png" class="img-responsive img-centered" alt="">
                             <p>This is a prototype made for the Principles of Game Design class on Coursera.</p>
-                            <ul class="list-inline item-details">
+                            <ul class="item-details">
                                 <li>
                                     <strong>Date:</strong> September 2016
                                 </li>
@@ -325,7 +325,7 @@
                                     <strong>Type:</strong> Running
                                 </li>
                                 <li>
-                                    <strong>My role:</strong> Game designer & programmer
+                                    <strong>Role:</strong> Game designer & programmer
                                 </li>
                                 <li>
                                     <a href="https://github.com/zhuyidiwow/Tomb-Victims/releases/tag/0.1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
@@ -354,7 +354,7 @@
                             <hr class="star-primary">
                             <img src="resources/images/portfolio/4yiCon.png" class="img-responsive img-centered" alt="">
                             <p>This game is made for my Final Year Project.</p>
-                            <ul class="list-inline item-details">
+                            <ul class="item-details">
                                 <li>
                                     <strong>Date:</strong> November 2016
                                 </li>
@@ -362,7 +362,7 @@
                                     <strong>Type:</strong> Construction Simulation
                                 </li>
                                 <li>
-                                    <strong>My role:</strong> Game designer & programmer
+                                    <strong>Role:</strong> Game designer & programmer
                                 </li>
                                 <li>
                                     <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
@@ -392,7 +392,7 @@
                             <img src="resources/images/portfolio/5dualBalance.png" class="img-responsive img-centered" alt="">
                             <p>This game is currently available on Android platform, as I'm not in Apple's developer program and I can't test it on iOS.
                                 But I do plan to release it on the AppStore in the near future, after polishing it.</p>
-                            <ul class="list-inline item-details">
+                            <ul class="item-details">
                                 <li>
                                     <strong>Date:</strong> November 2016
                                 </li>
@@ -400,10 +400,10 @@
                                     <strong>Type:</strong> 3D cooperation mobile game
                                 </li>
                                 <li>
-                                    <strong>My role:</strong> Game designer & programmer
+                                    <strong>Role:</strong> Game designer & programmer
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
+                                    <a href="https://github.com/COMP4122/COMP3432-Innovative-Computing-Paradigm/releases/tag/alpha6"><i class="fa fa-download" aria-hidden="true"></i> Downloadt</a>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -429,7 +429,7 @@
                             <hr class="star-primary">
                             <img src="resources/images/portfolio/6primalLife.png" class="img-responsive img-centered" alt="">
                             <p>This is an ongoing term project for <i>Game Design and Development</i> class at the HK PolyU.</p>
-                            <ul class="list-inline item-details">
+                            <ul class="item-details">
                                 <li>
                                     <strong>Date:</strong> November 2016
                                 </li>
@@ -437,7 +437,7 @@
                                     <strong>Type:</strong> 3D low-poly survival game
                                 </li>
                                 <li>
-                                    <strong>My role:</strong> Game designer, level designer, animator, programmer
+                                    <strong>Role:</strong> Game designer, level designer, animator, programmer
                                 </li>
                                 <li>
                                     <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
