--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <p>I'm currently an undergraduate student. I was born in Henan, China and now living in Hong Kong.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Although my major is not game related, I was inspired to be a game design during my exchange life in University of Florida. Now I'm walking firmly on my way to become a game designer!</p>
+                    <p>Although my major is not related to games, I was inspired to be a game designer during my exchange life in University of Florida. Now I'm working hard for my goal!</p>
                 </div>
             </div>
         </div>
