--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <!-- Custom Fonts -->
     <script src="https://use.fontawesome.com/48cbb5f483.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300" rel="stylesheet">
     <link href="resources/fonts/Lora-Regular.ttf" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -264,20 +264,20 @@
                                 <img src="resources/images/portfolio/1primalSpace/4-inventory.png" class="img-responsive img-centered" alt="">
                             </div>
 
-                            <ul class="item-details">
-                            <li>
-                                <strong>Date:</strong> April 2016
-                            </li>
-                            <li>
-                                <strong>Type:</strong> 2D Platformer
-                            </li>
-                            <li>
-                                <strong>Role:</strong> Game designer & programmer
-                            </li>
-                            <li>
-                                <a href="https://github.com/zhuyidiwow/Interdisciplinary-Design/releases/tag/v1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
-                            </li>
-                            </ul>
+                            <div class="item-details">
+                                <p>
+                                    <strong>Date:</strong> April 2016
+                                </p>
+                                <p>
+                                    <strong>Type:</strong> 2D Platformer
+                                </p>
+                                <p>
+                                    <strong>Role:</strong> Game designer & programmer
+                                </p>
+                                <p>
+                                    <a href="https://github.com/zhuyidiwow/Interdisciplinary-Design/releases/tag/v1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+                                </p>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -310,20 +310,20 @@
                                 <p>The second level is an expansion of the first level. I redesigned the scene and the overall aesthetics using assets purchased from <em>Kenney Studio</em>. The assets made by <em>Kenny Studio</em> helped me a lot, as I know little about graphical assets creation. I also made simple animations with provided models. In this level, you need to shoot zombies without hurting civilians. I added different sounds for zombies and civilians, aiming at invoking the emotion of fear and empathy.</p>
                                 <img src="resources/images/portfolio/2zombieTown/2-looking-at-house.png" class="img-responsive img-centered" alt="">
                             </div>
-                            <ul class="item-details">
-                                <li>
+                            <div class="item-details">
+                                <p>
                                     <strong>Date:</strong> September 2016
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Type:</strong> First Person Shooter
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Role:</strong> Game designer & programmer
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <a href="https://github.com/zhuyidiwow/Box-Shooter/releases/tag/v0.1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
-                                </li>
-                            </ul>
+                                </p>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -356,20 +356,20 @@
                                 <img src="resources/images/portfolio/3tombVictims/7exit.png" class="img-responsive img-centered" alt="">
                                 <p>I plan to implement more feature, like powerups and crafting, and implement local multiplayer support for this game in the future.</p>
                             </div>
-                            <ul class="item-details">
-                                <li>
+                            <div class="item-details">
+                                <p>
                                     <strong>Date:</strong> September 2016
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Type:</strong> Running
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Role:</strong> Game designer & programmer
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <a href="https://github.com/zhuyidiwow/Tomb-Victims/releases/tag/0.1"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
-                                </li>
-                            </ul>
+                                </p>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -400,23 +400,23 @@
                                 <img src="resources/images/portfolio/4yiCon/13-construction-display-info.png" class="img-responsive img-centered" alt="">
                                 <p>In this game, the player plays the role of a project manager, whose goal is to minimize project time and cost of a simulated project through optimizing labor allocation strategies. The User’s Manual was made to assist the conduction of play test and evaluation of the game, and covers all inputs methods and guidelines for playing this game.</p>
                             </div>
-                            <ul class="item-details">
-                                <li>
+                            <div class="item-details">
+                                <p>
                                     <strong>Date:</strong> November 2016
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Type:</strong> Serious Game - Construction Simulation
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Role:</strong> Game designer & programmer
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <a href="resources/articles/fyp/user's-manual.pdf"><i class="fa fa-book" aria-hidden="true"></i> User's Manual</a>
-                                </li>
-                            </ul>
+                                </p>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -449,20 +449,20 @@
                                 <img src="resources/images/portfolio/5dualBalance/6rollLevel.png" class="img-responsive img-centered" alt="">
                                 <p>This game is currently available only on Android platform. But we do plan to release it on the AppStore in the near future, after polishing it, and sharing the joy with more people.</p>
                             </div>
-                            <ul class="item-details">
-                                <li>
+                            <div class="item-details">
+                                <p>
                                     <strong>Date:</strong> November 2016
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Type:</strong> 3D cooperation mobile game
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Role:</strong> Game designer & programmer
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <a href="https://github.com/COMP4122/COMP3432-Innovative-Computing-Paradigm/releases/tag/alpha6"><i class="fa fa-download" aria-hidden="true"></i> Download (Android only)</a>
-                                </li>
-                            </ul>
+                                </p>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -494,20 +494,20 @@
                                 <img src="resources/images/portfolio/6primalLife/3-snowfield.png" class="img-responsive img-centered" alt="">
                                 <p>This project is still on-going, but we plan to finish it with in November 2016.</p>
                             </div>
-                            <ul class="item-details">
-                                <li>
+                            <div class="item-details">
+                                <p>
                                     <strong>Date:</strong> November 2016
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Type:</strong> 3D Low-poly Survival Game
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Role:</strong> Game designer, level designer, animator, programmer
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
-                                </li>
-                            </ul>
+                                </p>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -527,7 +527,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Collaborate Conference Scheduling Web Application</h2>
+                            <h2>Collaborative Conference Scheduling Web Application</h2>
                             <hr class="star-primary">
                             <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive img-centered" alt="">
                             <div class="portfolio-description">
@@ -541,20 +541,20 @@
 
                                 <p>The website is no longer functioning as I no longer have access to the database. But you can still find a detailed description of the design and functions, and plenty of screenshots in the documentation.</p>
                             </div>
-                            <ul class="item-details">
-                                <li>
+                            <div class="item-details">
+                                <p>
                                     <strong>Date:</strong> November 2015
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Type:</strong> Web Application System
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <strong>Role:</strong> Web designer, Front-end web developer
-                                </li>
-                                <li>
+                                </p>
+                                <p>
                                     <a href="resources/images/portfolio/7conferenceMGT/Documentation.pdf"><i class="fa fa-book" aria-hidden="true"></i> Documentation</a>
-                                </li>
-                            </ul>
+                                </p>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
