--- a/dualBalance.html
+++ b/dualBalance.html
@@ -20,7 +20,8 @@
     <!-- Custom Fonts -->
     <script src="https://use.fontawesome.com/48cbb5f483.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+          type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="resources/fonts/Lora-Regular.ttf" rel="stylesheet">
 
@@ -35,73 +36,77 @@
 
 <body id="page-top" class="index">
 
-    <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="index.html">Yidi Zhu</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+<!-- Navigation -->
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand" href="index.html">Yidi Zhu</a>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
 
-    <div class="container" style="padding-top:100px">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                    <h2 style="text-align: center">Dual Balance</h2>
-                    <hr class="star-primary">
-                    <img src="resources/images/portfolio/5dualBalance.png" class="img-responsive img-centered" alt="">
-                    <p>This game is currently available on Android platform, as I'm not in Apple's developer program and I can't test it on iOS.
-                        But I do plan to release it on the AppStore in the near future, after polishing it.</p>
-                    <ul class="item-details">
-                        <li>
-                            <strong>Date:</strong> November 2016
-                        </li>
-                        <li>
-                            <strong>Type:</strong> 3D cooperation mobile game
-                        </li>
-                        <li>
-                            <strong>My role:</strong> Game designer & programmer
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
-                        </li>
-                    </ul>
-            </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li class="page-scroll">
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="#about">About</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+<div class="container" style="padding-top:100px">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h2 style="text-align: center">Dual Balance</h2>
+            <hr class="star-primary">
+            <img src="resources/images/portfolio/5dualBalance.png" class="img-responsive img-centered" alt="">
+            <p>This game is currently available on Android platform, as I'm not in Apple's developer program and I can't
+                test it on iOS.
+                But I do plan to release it on the AppStore in the near future, after polishing it.</p>
+            <ul class="item-details">
+                <li>
+                    <strong>Date:</strong> November 2016
+                </li>
+                <li>
+                    <strong>Type:</strong> 3D cooperation mobile game
+                </li>
+                <li>
+                    <strong>My role:</strong> Game designer & programmer
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
+                </li>
+            </ul>
         </div>
     </div>
+</div>
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<!-- Plugin JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Theme JavaScript -->
-    <script src="js/freelancer.min.js"></script>
+<!-- Theme JavaScript -->
+<script src="js/freelancer.min.js"></script>
 
 </body>
 
